Refactor CSS variable usage across stylesheets, replacing 'size' with 'block-size' and 'inline-size'. Update plugin imports and enhance markdown processing with cleaner way of using figures. Adjust layout dimensions in various templates for reduced CLS. Also improving the "intro"/"summary" section of posts.

--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -1,7 +1,7 @@
 <footer class="[ gradient-border ]" data-gradient-border="block-start">
 	<div class="[ site-footer ]">
 		<is-land on:visible>
-			<div class="[ wrapper ][ padding-block-start-9 ]" style="--wrapper-size: 100ch;">
+			<div class="[ wrapper ][ padding-block-start-9 ]" style="--wrapper-size: 60em;">
 				<button type="button" id="update-doodle">
 					{%- inlineIcon "fas:dice" -%}
 					Refresh doodle
@@ -24,7 +24,7 @@
 				}
 			</css-doodle>
 		</is-land>
-		<div class="[ inner ] [ wrapper ]" style="--wrapper-size: 100ch;">
+		<div class="[ inner ] [ wrapper ]" style="--wrapper-size: 60em;">
 			{%- image
 			"./src/assets/img/elly-puppy-transparent.webp",
 			"A cute and playful digital drawing of Elly the Golden Retriever Puppy Girl typing on her sticker covered laptop and looking surprised. She has wavy blonde hair and she's wearing a grey scoop neck top and large green headphones which are tucked under her big fluffy ears." -%}
