--- a/src/_includes/newsletter.njk
+++ b/src/_includes/newsletter.njk
@@ -12,5 +12,5 @@
 		<input type="email" name="email" id="bd-email">
 	</div>
 	<button type="submit">✨ Subscribe ✨</button>
-	<small><a href="https://buttondown.com/">Powered by Buttondown</a></small>
+	<small><a href="https://buttondown.com/refer/ellyloel">Powered by Buttondown</a></small>
 </form>
