--- a/src/input/content/pages/search.njk
+++ b/src/input/content/pages/search.njk
@@ -6,12 +6,7 @@ title: Search
 <header class="[ main-header ][ padding-block-end-8 gradient-border ]" data-gradient-border="block-end">
 	<pagefind-search>
 		<form action="https://duckduckgo.com/" method="get" role="search" autocomplete="off" novalidate class="[ flow ]">
-			<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
-			<h1
-				id="content"
-				tabindex="-1"
-				class="[ p-name ][ margin-0 line-height-1 ]"
-			><label for="search">
+			<h1 class="[ p-name ][ margin-0 line-height-1 ]"><label for="search">
 				{{ title }}
 			</label></h1>
 			<input type="text" id="search" name="q" enterkeyhint="search" autofocus>
