--- a/src/input/css/blocks/callout.css
+++ b/src/input/css/blocks/callout.css
@@ -2,8 +2,8 @@
 	background: var(--accent-bg-subtle);
 	border: var(--border-size-2) solid var(--accent-border);
 	border-radius: var(--radius-3);
-	padding-block: var(--size-5);
-	padding-inline: var(--size-5);
+	padding-block: var(--block-size-5);
+	padding-inline: var(--inline-size-5);
 	position: relative;
 
 	> .inline-icon {
