--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -1,10 +1,15 @@
 ---
 layout: base-without-header.njk
 ---
-<header class="[ post-head ][ padding-block-end-6 gradient-border ]" data-gradient-border="block-end" data-pagefind-ignore>
-	<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
-	<h1 id="content" tabindex="-1" class="[ p-name ][ line-height-1 margin-0 ]">{{ title }}</h1>
-	<div class="[ post-meta ][ margin-block-start-2 ]">
+{%- if summary -%}
+<section class="[ summary ]">
+	{{ summary | md | safe }}
+</section>
+<hr>
+{%- endif -%}
+<header class="[ main-header ]" data-pagefind-ignore>
+	<h1 class="[ p-name ][ line-height-1 margin-0 ]">{{ title }}</h1>
+	<div class="[ post-meta ][ margin-block-start-3 ]">
 		{%- include "hidden-microformats.njk" -%}
 		<div>
 			{%- if created -%}
@@ -26,7 +31,7 @@ layout: base-without-header.njk
 				{%- include "date.njk" -%}
 			{%- endif -%}
 		</div>
-		<div class="[ flex flex-wrap align-center column-gap-2 row-gap-1 margin-block-start-1 ]">
+		<div class="[ flex flex-wrap align-center column-gap-2 row-gap-1 margin-block-start-2 ]">
 			{%- if tags -%}
 				<span class="[ flex flex-wrap align-center gap-1 ]" data-pagefind-meta="tags">
 					{%- labelledInlineIcon "fas:tag", { "aria-label": "Tags" } -%}
@@ -44,33 +49,19 @@ layout: base-without-header.njk
 		<table-of-contents>
 			<nav aria-labelledby="toc-heading" class="[ toc-container ][ content-width ]" data-pagefind-ignore>
 				<h2 id="toc-heading">Table of contents</h2>
-				{{ content | toc | safe }}
+				<div class="[ toc ][ recursive-flow ]" hidden="until-found">
+					{{- content | toc | safe -}}
+				</div>
 			</nav>
 		</table-of-contents>
 	{%- endif -%}
 {%- endif -%}
 <article class="[ markdown-container ] [ e-content ] [ flow flow-space-setter ]" style="--flow-space-setter: 2em;">
-	{%- if not created and not modified -%}
-		{%- md -%}
-~~~ callout **Heads up this is an old post**
-This post hasn't been updated a long time, so it might be kinda crusty.
-~~~
-		{%- endmd -%}
-	{%- endif -%}
-	{% if content | includes("<!-- intro -->") %}
-	<div class="[ intro ][ flow flow-space-setter ]" style="--flow-space-setter: 2em;">
-		{{ content | split("<!-- intro -->") | first | safe }}
-	</div>
-	<div class="[ flow flow-space-setter ]" style="--flow-space-setter: 2em;">
-		{{ content | split("<!-- intro -->") | last | safe }}
-	</div>
-	{% else %}
 	<div class="[ flow flow-space-setter ]" style="--flow-space-setter: 2em;">
 		{{ content | safe }}
 	</div>
-	{% endif %}
 </article>
-<footer class="[ content-footer ][ flow flow-space-setter ]" style="--flow-space-setter: var(--size-8);" data-pagefind-ignore>
+<footer class="[ content-footer ][ flow flow-space-setter ]" style="--flow-space-setter: var(--block-size-8);" data-pagefind-ignore>
 	<div class="[ share ][ flow flow-space-setter ]">
 		<h2>Share</h2>
 		<div>
