--- a/src/input/css/blocks/card.css
+++ b/src/input/css/blocks/card.css
@@ -1,5 +1,5 @@
 .feed-item-card {
-	--shadow-offset: var(--size-1);
+	--shadow-offset: var(--size-px-1);
 
 	align-content: space-between;
 	background: var(--accent-bg-subtle);
@@ -10,16 +10,17 @@
 	box-shadow: var(--shadow-offset) var(--shadow-offset) 0 0
 		var(--accent-bg-hover);
 	display: grid;
-	gap: var(--size-3);
+	gap: var(--block-size-3) var(--inline-size-3);
 	grid-template-areas:
 		"content"
 		"image";
 	inline-size: fit-content;
-	padding: var(--size-4);
+	padding-block: var(--block-size-4);
+	padding-inline: var(--inline-size-4);
 	transition: box-shadow 300ms var(--ease-1), opacity 0.5s var(--ease-2);
 
 	&:is(:hover, :focus-within) {
-		--shadow-offset: var(--size-2);
+		--shadow-offset: var(--size-px-2);
 
 		transition: box-shadow 150ms var(--ease-1);
 	}
@@ -55,7 +56,7 @@
 	}
 
 	.feed-item-card-footer {
-		--flow-space: var(--size-1);
+		--flow-space: var(--block-size-1);
 
 		& > a {
 			background: none;
