--- a/src/input/css/blocks/chronological.css
+++ b/src/input/css/blocks/chronological.css
@@ -1,5 +1,5 @@
 nav[aria-labelledby="chronological"] {
-	--shadow-offset: var(--size-1);
+	--shadow-offset: var(--size-px-1);
 
 	background: var(--accent-bg-subtle);
 	border: var(--border-size-2) solid var(--accent-bg-hover);
@@ -7,11 +7,12 @@ nav[aria-labelledby="chronological"] {
 	box-shadow: var(--shadow-offset) var(--shadow-offset) 0 0
 		var(--accent-bg-hover);
 	inline-size: fit-content;
-	padding: var(--size-3);
+	padding-block: var(--block-size-3);
+	padding-inline: var(--inline-size-3);
 	transition: box-shadow 300ms var(--ease-1);
 
 	&:is(:hover, :focus-within) {
-		--shadow-offset: var(--size-2);
+		--shadow-offset: var(--size-px-2);
 
 		transition: box-shadow 150ms var(--ease-1);
 	}
