--- a/src/input/css/blocks/hero.css
+++ b/src/input/css/blocks/hero.css
@@ -12,7 +12,7 @@
 
 .home header {
 	& .hero {
-		margin-block-end: var(--size-8);
+		margin-block-end: var(--block-size-8);
 
 		& h1 {
 			margin: 0;
@@ -63,7 +63,7 @@
 
 							@container text-fix (inline-size > 18rem) {
 								font-size: calc(
-									var(--font-size) * 1.13
+									var(--font-size) * 1.02
 								); /* I know this looks really weird but without it everything is off by just a little bit and idk why lol */
 							}
 						}
