--- a/src/input/css/blocks/home.css
+++ b/src/input/css/blocks/home.css
@@ -1,15 +1,15 @@
 .home {
 	display: flex;
 	flex-direction: column;
-	gap: var(--size-8);
+	gap: var(--block-size-8) var(--inline-size-8);
 
 	& .about {
-		column-gap: var(--size-3);
+		column-gap: var(--inline-size-3);
 		display: grid;
 
 		@media (width >= 48em) { /* 768px */
 			grid-template-columns: 2fr 1fr;
-			row-gap: var(--size-8);
+			row-gap: var(--block-size-8);
 		}
 	}
 }
