--- a/src/input/css/blocks/newsletter.css
+++ b/src/input/css/blocks/newsletter.css
@@ -1,5 +1,5 @@
 .newsletter {
-	--shadow-offset: var(--size-1);
+	--shadow-offset: var(--size-px-1);
 
 	background: var(--accent-bg-subtle);
 	border-color: var(--accent-bg-hover);
@@ -12,7 +12,7 @@
 	transition: box-shadow 0.3s var(--ease-1), opacity 0.5s var(--ease-2);
 
 	&:is(:hover, :focus-within) {
-		--shadow-offset: var(--size-2);
+		--shadow-offset: var(--size-px-2);
 
 		transition: box-shadow 0.15s var(--ease-1);
 	}
