--- a/src/input/css/blocks/photos.css
+++ b/src/input/css/blocks/photos.css
@@ -8,7 +8,7 @@
 	@media (width >= 48em) { /* 768px */
 		grid-template-columns: 2fr 1fr;
 		grid-template-columns: 1fr 1fr 1fr;
-		row-gap: var(--size-8);
+		row-gap: var(--block-size-8);
 
 		& img {
 			aspect-ratio: 2 / 3;
