--- a/src/input/css/blocks/search.css
+++ b/src/input/css/blocks/search.css
@@ -14,12 +14,12 @@ pagefind-search {
 }
 
 h2[aria-live="polite"], div[id="search-results"] {
-	--flow-space: var(--size-8);
+	--flow-space: var(--block-size-8);
 }
 
 div[id="search-results"] {
 	& article {
-		--flow-space: var(--size-8);
+		--flow-space: var(--block-size-8);
 
 		position: relative;
 
@@ -31,7 +31,7 @@ div[id="search-results"] {
 		}
 
 		& p {
-			--flow-space: var(--size-2);
+			--flow-space: var(--block-size-2);
 		}
 
 		& .metadata {
