--- a/src/input/css/blocks/skip-link.css
+++ b/src/input/css/blocks/skip-link.css
@@ -2,11 +2,10 @@
 	background: var(--accent-text);
 	border-radius: var(--radius-round);
 	color: var(--accent-bg);
-	inset-block-start: var(--size-3);
-
-	/* inset-inline-start: 50%; */
-	left: 50%;
-	padding: var(--size-2) var(--size-4);
+	inset-block-start: var(--block-size-3);
+	inset-inline-start: 50%;
+	padding-block: var(--block-size-2);
+	padding-inline: var(--inline-size-4);
 	position: fixed;
 	transform: translateX(-50%);
 	z-index: var(--layer-5);
