--- a/src/input/css/blocks/webmentions.css
+++ b/src/input/css/blocks/webmentions.css
@@ -5,7 +5,7 @@
 	.input-wrapper {
 		display: flex;
 		flex-wrap: wrap;
-		gap: var(--size-3);
+		gap: var(--block-size-3) var(--inline-size-3);
 	}
 
 	& details {
@@ -20,7 +20,7 @@
 		padding-left: 0;
 
 		& li {
-			--shadow-offset: var(--size-1);
+			--shadow-offset: var(--size-px-1);
 
 			background: var(--accent-bg-subtle);
 			border-color: var(--accent-bg-hover);
@@ -30,11 +30,12 @@
 				var(--accent-bg-hover);
 			inline-size: 100%;
 			max-inline-size: unset;
-			padding: var(--size-4);
+			padding-block: var(--block-size-4);
+			padding-inline: var(--inline-size-4);
 			transition: box-shadow 300ms var(--ease-1), opacity 0.5s var(--ease-2);
 
 			&:is(:hover, :focus-within) {
-				--shadow-offset: var(--size-2);
+				--shadow-offset: var(--size-px-2);
 
 				transition: box-shadow 150ms var(--ease-1);
 			}
@@ -42,7 +43,7 @@
 	}
 
 	.namepile .h3 {
-		margin-right: var(--size-1);
+		margin-inline-end: var(--inline-size-1);
 	}
 
 	.webmention {
@@ -61,7 +62,7 @@
 			align-items: baseline;
 			display: flex;
 			flex-wrap: wrap;
-			gap: var(--size-2);
+			gap: var(--block-size-2) var(--inline-size-2);
 
 			.author-wrapper {
 				text-decoration: none;
