--- a/src/input/css/blocks/weeks.css
+++ b/src/input/css/blocks/weeks.css
@@ -2,7 +2,7 @@
 	/* display: flex;
 	flex-wrap: wrap; */
 	display: grid;
-	gap: var(--size-1);
+	gap: var(--block-size-1) var(--inline-size-1);
 	grid-template-columns: repeat(auto-fill, minmax(1em, 1fr));
 	
 	& li {
@@ -10,7 +10,8 @@
 		border-radius: var(--radius-2);
 		min-block-size: 1em;
 		min-inline-size: 1em;
-		padding: var(--size-1);
+		padding-block: var(--block-size-1);
+		padding-inline: var(--inline-size-1);
 
 		&:has(.event) {
 			grid-column: span 8;
