--- a/src/input/root/feeds/styles.xsl.njk
+++ b/src/input/root/feeds/styles.xsl.njk
@@ -81,7 +81,7 @@ permalink: "styles.xsl"
 			<body>
 				<a class="[ skip-link ] [ button ]" href="#content">Skip to content</a>
 
-				<header class="[ site-head ] [ wrapper gradient-border ]" style="--wrapper-size: 100ch;">
+				<header class="[ site-head ] [ wrapper gradient-border ]" style="--wrapper-size: 60em;">
 					<nav class="[ nav ][ flex flex-wrap gap-3 align-center ]">
 						<!-- link to home: http://microformats.org/wiki/rel-home -->
 						<a href="/" rel="home" class="[ u-url u-uid ] [ text-decoration-none ]">
@@ -102,10 +102,10 @@ permalink: "styles.xsl"
 					</nav>
 				</header>
 
-				<main class="[ h-feed ][ wrapper flow ]" style="--wrapper-size: 100ch;">
+				<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
+				<main id="content" tabindex="-1" class="[ h-feed ][ wrapper flow ]" style="--wrapper-size: 60em;">
 					<header class="[ main-header ][ padding-block-end-6 gradient-border ]" data-gradient-border="block-end">
-						<!-- tabindex fixes focus issue: https://benmyers.dev/blog/skip-links/#tldr -->
-						<h1 id="content" tabindex="-1" class="[ p-name ][ margin-0 line-height-1 ]">
+						<h1 class="[ p-name ][ margin-0 line-height-1 ]">
 							<xsl:variable name="feedLink">
 								<xsl:value-of select="/rss/channel/atom:link/@href"/>
 								<xsl:value-of select="/atom:feed/atom:link[1]/@href"/>
@@ -199,7 +199,7 @@ permalink: "styles.xsl"
 
 				<footer>
 					<div class="[ site-footer ]">
-						<div class="[ inner ] [ wrapper ]" style="--wrapper-size: 100ch;">
+						<div class="[ inner ] [ wrapper ]" style="--wrapper-size: 60em;">
 							<nav aria-labelledby="footer-nav" class="[ sitemap ] [ flow ]">
 								<h2 id="footer-nav">Sitemap</h2>
 								<ul class="[ flex flex-wrap gap-6 ]">
