--- a/src/_includes/footer.njk
+++ b/src/_includes/footer.njk
@@ -56,7 +56,7 @@
 
 			<div class="[ acknowledgement-of-country ] [ flow ]">
 				<h2>Acknowledgement of Country</h2>
-				<p>I acknowledge the Traditional Owners and Custodians of the lands on which I live and work, the <a href="https://www.bunuronglc.org">Bunurong People</a> and <a href="https://www.wurundjeri.com.au">Wurundjeri People</a> of the <a href="https://en.wikipedia.org/wiki/Kulin_nation">Kulin Nation</a>. I acknowledges their continuing connection to land, waters and community. I pay my respects to the people, the cultures and the Elders past, present and emerging.</p>
+				<p>I acknowledge the Traditional Owners and Custodians of the lands on which I live and work, the <a href="https://www.bunuronglc.org">Bunurong People</a> and <a href="https://www.wurundjeri.com.au">Wurundjeri People</a> of the <a href="https://en.wikipedia.org/wiki/Kulin_nation">Kulin Nation</a>. I acknowledge their continuing connection to land, waters and community. I pay my respects to the people, the cultures and the Elders past, present and emerging.</p>
 				<p><strong>Sovereignty has never been ceded, it always was and always will be, Aboriginal land.</strong></p>
 			</div>
 
